--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -4,33 +4,17 @@
 
 .navbar-custom {
 	background-color: #252525;
-	line-height: 68px;
 }
 
-.navbar-dark .nav-link {
+.navbar-custom .collapse .navbar-nav .nav-item .nav-link {
 	color: #fff;
 	text-transform: uppercase;
 }
 
 .navbar-custom .collapse .navbar-nav .nav-item .active {
-	color: #00a2ff;
+	color: #ff6c00;
 }
 
 .navbar-custom .collapse .navbar-nav .nav-item .nav-link:hover {
-	color: #00a2ff;
-}
-
-#creations-nav {
-	font-size: 30px;
-}
-
-#creations-nav, #zenith-nav {
-	color: #fff;
-	display: block;
-	font-weight: bold;
-}
-
-#zenith-nav {
-	font-size: 47px;
-	margin-bottom: -25px;
+	color: #ff6c00;
 }
