Edit media query footer

--- a/assets/styles/mediaqueries.css
+++ b/assets/styles/mediaqueries.css
@@ -6,19 +6,6 @@
 	.navbar-brand {
 		margin-left: 33%;
 	}
-
-	#creations-nav, #creations-foot {
-		font-size: 23px;
-	}
-
-	#zenith-foot {
-		font-size: 35px;
-	}
-
-	#zenith-nav {
-		font-size: 35px;
-		margin-bottom: -40px;
-	}
 }
 
 @media screen and (max-width: 359px) {
@@ -29,6 +16,11 @@
 
 @media screen and (max-width: 991px) {
 	.footer-right, .footer-left {
+		text-align: center;
+		/*display: none;*/
+	}
+
+	#contact {
 		display: none;
 	}
 }
