--- a/assets/styles/capabilities.css
+++ b/assets/styles/capabilities.css
@@ -7,15 +7,18 @@ h2, p {
 }
 
 .btn-primary {
-	background-color: #00a2ff;
+	background-color: #000;
+	border: 5px solid #fff;
+	color: #fff;
 	font-weight: bold;
 	margin: 10px 0 20px;
 	padding: 10px 50px;
 }
 
 .btn-primary:hover {
-	background-color: #fff;
-	color: #00a2ff;
+	background-color: #ff6c00;
+	border: 5px solid #ff6c00;
+	color: #fff;
 }
 
 .center {
