--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -5,9 +5,11 @@ body {
 .btn-primary {
 	background-color: #000;
 	border: 5px solid #fff;
+	color: #fff;
 }
 
 .btn-primary:hover {
 	background-color: #ff6c00;
 	border: 5px solid #ff6c00;
+	color: #fff;
 }
