--- a/assets/styles/ramendictorian.css
+++ b/assets/styles/ramendictorian.css
@@ -3,6 +3,10 @@ h1 {
 	text-transform: uppercase;
 }
 
+h2, p {
+	font-family: 'Times New Roman', serif;
+}
+
 h3 {
 	margin-bottom: 30px;
 	text-align: center;
@@ -12,6 +16,10 @@ h3 {
 	background-color: #fff;
 	border: 3px solid #000;
 	color: #000;
+}
+
+.business {
+	font-family: 'Avenir', sans-serif;
 }
 
 .center {
@@ -56,6 +64,11 @@ h3 {
 
 .header p {
 	margin: 0;
+}
+
+.img-thumbnail {
+	background-color: #fff;
+	border: none;
 }
 
 .strategy {
