--- a/assets/styles/mediaqueries.css
+++ b/assets/styles/mediaqueries.css
@@ -2,25 +2,44 @@
 	MEDIA QUERIES
 ************************************/
 
-@media screen and (max-width: 415px) {
-	.navbar-brand {
-		margin-left: 33%;
+@media screen and (max-width: 991px) {
+	.footer-legal .footer-hide,
+	.footer-social .footer-hide {
+		display: none;
 	}
+
+	.footer-right {
+		margin-right: 0;
+	}
+
+}
+
+@media screen and (max-width: 415px) {
+
+	.footer-social {
+		margin-bottom: 0;
+		margin-top: 15px;
+		padding: 0;
+	}
+
+	.footer-left {
+		text-align: center;
+		width: 100%;		
+	}
+
+	.footer-right {
+		font-size: 14px;
+		margin: auto;
+	}
+
+	.navbar-brand {
+		margin-left: 30%;
+	}
+
 }
 
 @media screen and (max-width: 359px) {
 	.navbar-brand {
 		margin-left: 0;
-	}
-}
-
-@media screen and (max-width: 991px) {
-	.footer-right, .footer-left {
-		text-align: center;
-		/*display: none;*/
-	}
-
-	#contact {
-		display: none;
 	}
 }
