--- a/assets/styles/capabilities.css
+++ b/assets/styles/capabilities.css
@@ -16,9 +16,13 @@ h2, p {
 	margin: 30px 0 60px;
 }
 
+.col-md-4 {
+	padding: 0
+}
+
 .col-md-12 {
-	padding-top: 25px;
 	padding-bottom: 10px;
+	padding-top: 25px;
 }
 
 .container {
@@ -29,7 +33,24 @@ h2, p {
 	background-color: #252525;
 }
 
+.row {
+	padding: 0 15px;
+}
+
 #col-pad {
 	padding-top: 30px;
 	padding-bottom: 30px;
+}
+
+/************************************
+	MEDIA QUERIES
+************************************/
+
+
+@media screen and (max-width: 415px) {
+
+	.row {
+		padding: 0;
+	}
+
 }
