--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -2,6 +2,44 @@
 	NAVBAR
 ************************************/
 
+ul li ul {
+	display: none;
+	opacity: 0;
+	visibility: hidden;
+}
+
+ul li ul li {
+/*	background-color: #252525;
+	color: #fff;	*/
+}
+
+ul li ul li:hover {
+	color: #ff6c00;
+}
+
+ul li:hover > ul,
+ul li:focus-within > ul,
+ul li ul:hover {
+	display: block;
+	opacity: 1;
+	visibility: visible;
+}
+
+.dropdown-menu {
+	background-color: #252525;
+	margin-top: -10px;
+}
+
+.dropdown-menu .dropdown-item {
+	color: #fff;
+}
+
+.dropdown-menu .dropdown-item:hover,
+.dropdown-menu .dropdown-item:focus {
+	background-color: #252525;
+	color: #ff6c00;
+}
+
 .navbar-custom {
 	background-color: #252525;
 }
