--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -2,6 +2,10 @@
 	FOOTER
 ************************************/
 
+footer p {
+	/*color: #929292;*/
+}
+
 .fab {
 	background-color: #202020;
 	border-radius: 50%;
@@ -23,18 +27,27 @@
 	text-align: center;
 }
 
-.footer-hide:last-of-type {
-	margin-right: 0;
-}
-
 .footer-legal {
 	list-style: none;
 	padding-right: 0;
 	text-align: right;
 }
 
+.footer-left {
+	text-align: center;
+	width: 100%;		
+}
+
+.footer-right {
+	font-size: 14px;
+	margin: auto;
+}
+
 .footer-social {
 	list-style: none;
+	margin-bottom: 0;
+	margin-top: 15px;
+	padding: 0;
 }
 
 .footer-legal a:hover,
@@ -45,5 +58,41 @@
 .footer-legal li,
 .footer-social li {
 	display: inline-block;
-	margin-right: 15px;
+	margin-left: 7px;
+	margin-right: 7px;
+}
+
+.footer-legal .footer-hide,
+.footer-social .footer-hide {
+	display: none;
+}
+
+
+@media screen and (min-width: 1024px) {
+
+	.footer-hide:last-of-type {
+		margin-right: 0;
+	}
+
+	.footer-left {
+		text-align: left;
+		width: 33%;
+	}
+
+	.footer-legal .footer-hide,
+	.footer-social .footer-hide {
+		display: inline;
+	}
+
+	.footer-right {
+		margin-right: 0;
+		text-align: right;
+		width: 33%;
+	}
+
+	.mx-auto {
+		text-align: center;
+		width: 33%;
+	}
+
 }
