--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -2,57 +2,56 @@
 	NAVBAR
 ************************************/
 
-ul li ul {
-	display: none;
-	opacity: 0;
-	visibility: hidden;
-}
-
-ul li ul li {
-/*	background-color: #252525;
-	color: #fff;	*/
-}
-
-ul li ul li:hover {
-	color: #ff6c00;
-}
-
-ul li:hover > ul,
-ul li:focus-within > ul,
-ul li ul:hover {
-	display: block;
-	opacity: 1;
-	visibility: visible;
-}
-
-.dropdown-menu {
-	background-color: #252525;
-	margin-top: -10px;
-}
-
-.dropdown-menu .dropdown-item {
-	color: #fff;
-}
-
-.dropdown-menu .dropdown-item:hover,
-.dropdown-menu .dropdown-item:focus {
-	background-color: #252525;
-	color: #ff6c00;
-}
-
 .navbar-custom {
 	background-color: #252525;
 }
 
-.navbar-custom .collapse .navbar-nav .nav-item .nav-link {
+.navbar-custom .collapse .navbar-nav .nav-item .nav-link:hover {
+	color: #ff6c00;
+}
+
+
+@media screen and (min-width: 1024px) {
+
+	ul li ul {
+		display: none;
+		opacity: 0;
+		visibility: hidden;
+	}
+
+	ul li ul li:hover {
+		color: #ff6c00;
+	}
+
+	ul li:hover > ul,
+	ul li:focus-within > ul,
+	ul li ul:hover {
+		display: block;
+		opacity: 1;
+		visibility: visible;
+	}
+
+	.dropdown-menu {
+		background-color: #252525;
+		margin-top: -10px;
+	}
+
+	.dropdown-menu .dropdown-item {
+		color: #fff;
+	}
+
+	.dropdown-menu .dropdown-item:hover,
+	.dropdown-menu .dropdown-item:focus {
+		background-color: #252525;
+		color: #ff6c00;
+	}
+}
+
+/*.navbar-custom .collapse .navbar-nav .nav-item .nav-link {
 	color: #fff;
 	text-transform: uppercase;
 }
 
 .navbar-custom .collapse .navbar-nav .nav-item .active {
 	color: #ff6c00;
-}
-
-.navbar-custom .collapse .navbar-nav .nav-item .nav-link:hover {
-	color: #ff6c00;
-}
+}*/
