--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2,10 +2,6 @@ body {
 	background-color: #111;
 }
 
-footer p {
-	color: #929292;
-}
-
 .btn-primary {
 	background-color: #111;
 	border: 3px solid #fff;
@@ -13,6 +9,7 @@ footer p {
 	text-transform: uppercase;
 }
 
+.btn-primary:focus,
 .btn-primary:hover {
 	background-color: #ff6c00;
 	border: 3px solid #ff6c00;
