--- a/assets/styles/about.css
+++ b/assets/styles/about.css
@@ -1,11 +1,6 @@
 footer p {
 	color: #929292;
-}
-
-h1 {
-	color: #fff;
-	margin: 70px 0 50px;
-	text-align: center;
+	text-align: right;
 }
 
 p {
@@ -14,22 +9,35 @@ p {
 }
 
 .btn-primary {
-	margin: 10px 30px 50px;
+	margin: 30px 30px 0;
 }
 
 .center {
+	margin-bottom: 60px;
 	text-align: center;
 }
 
-.container {
+.logo-container {
+	margin: 60px auto;
 	text-align: center;
 }
 
-.custom-container {
-	margin-top: 50px;
-	padding: 20px 50px;
+
+@media screen and (min-width: 768px) {
+
+	.footer-custom {
+		bottom: 0;
+		position: absolute;
+		width: 100%;
+	}
+
 }
 
-.zenith-logo {
-	margin: 70px 0 60px;
+
+@media screen and (min-width: 1024px) {
+
+	.custom-container {
+		margin-top: 50px;
+		padding: 20px 50px;
+	}
 }
