--- a/assets/styles/thehistorycompany.css
+++ b/assets/styles/thehistorycompany.css
@@ -1,11 +1,131 @@
+body {
+	text-align: center;
+}
+
 h1 {
-	margin-bottom: 70px;
+	font-size: 1.5rem;
+	line-height: 36px;
+	margin: 50px auto;
 	text-transform: uppercase;
 }
 
-h2, p {
+h2 {
+	font-family: 'Times New Roman', serif;
+	font-size: 1.3rem;
+	margin: 50px auto;
+}
+
+h3 {
+	margin: 20px auto;
+}
+
+p {
 	font-family: 'Times New Roman', serif;
 }
+
+.btn-primary {
+	background-color: #fff;
+	border: 3px solid #000;
+	color: #000;
+}
+
+.business {
+	font-family: 'Avenir', sans-serif;
+	margin: 0;
+}
+
+.business:first-of-type {
+	margin-top: 40px;
+}
+
+.container-fluid {
+	background-color: #fff;
+	padding: 10px 10px 30px;
+}
+
+.container-custom {
+	background-color: #fff;
+}
+
+.container-custom .container {
+	padding-bottom: 20px;
+}
+
+.cover-photo {
+	background-image: url(../images/case-study-thehistorycompany/cover-photo.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+	box-shadow: inset 0 0 0 1000px rgba(0,0,0,.5);
+	color: #fff;
+	padding: 5px 0;
+}
+
+.gray {
+	color: #929292;
+	margin-bottom: 20px;
+}
+
+.img-thumbnail {
+	background-color: #fff;
+	border: none;
+}
+
+.navbar {
+	text-align: left;
+}
+
+.photography {
+	margin-bottom: 20px;
+}
+
+.row-2 {
+	margin-bottom: 20px;
+}
+
+.strategy {
+	color: #fff;
+	padding: 10px 10px 30px;
+}
+
+.website-full {
+	display: none;
+}
+
+
+@media screen and (min-width: 768px) {
+	h1 {
+		font-size: 1.7rem;
+	}
+
+	h2 {
+		font-size: 1.5rem;
+	}
+
+	.business:first-of-type {
+		margin-top: 0;
+	}
+
+	.container-custom .container {
+		padding-top: 30px;
+		text-align: left;
+	}
+
+	.website-full {
+		display: block;
+		margin-top: 30px;
+	}	
+}
+
+
+@media screen and (min-width: 992px) {
+
+	.row {
+		margin-bottom: 50px;
+		margin-top: 30px;
+	}
+}
+
+/*
 
 h3 {
 	margin-bottom: 30px;
@@ -44,16 +164,7 @@ h3 {
 	width: 60rem;
 }
 
-.cover-photo {
-	background-image: url(../images/case-study-thehistorycompany/cover-photo.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-	box-shadow: inset 0 0 0 1000px rgba(0,0,0,.5);
-	color: #fff;
-	height: 50rem;
-	padding-top: 150px;
-	text-align: center;
-}
+
 
 .gray {
 	color: #929292;
@@ -82,9 +193,6 @@ h3 {
 	text-align: center;
 }
 
-/************************************
-	MEDIA QUERIES
-************************************/
 
 @media screen and (max-width: 415px) {
 	h1 {
@@ -103,11 +211,5 @@ h3 {
 
 	.row {
 		text-align: center;
-	}
-}
-/*
-@media screen and (max-width: 504px) {
-	h1, h2 {
-		font-size: 1rem;
 	}
 }*/
