--- a/assets/styles/services.css
+++ b/assets/styles/services.css
@@ -9,6 +9,10 @@ h3 {
     margin-bottom: 40px;
 }
 
+h4 {
+	font-family: 'Avenir', sans-serif;
+}
+
 hr {
     background-color: #929292;
     border: none;
@@ -18,15 +22,23 @@ hr {
     width: 90%;
 }
 
-.col-xs-6 {
-	width: 50%
+.carousel-inner {
+	padding-bottom: 40px;
+}
+
+.col-xs-12 {
+	font-family: 'Avenir', sans-serif;
 }
 
 .container-fluid {
     background-color: #252525;
     color: #fff;
     font-family: 'Times New Roman', serif;
-    padding: 50px 0;
+    padding: 70px 0 50px;
+}
+
+.container-fluid p {
+	font-size: 1.1rem;
 }
 
 .custom-container {
@@ -40,6 +52,7 @@ hr {
 }
 
 .custom-container p {
+	font-size: 1.1rem;
 	text-align: center;
 }
 
@@ -61,6 +74,13 @@ hr {
 	display: none;
 }
 
+
+@media screen and (min-width: 425px) {
+	.container-fluid p,
+	.custom-container p {
+		font-size: 1.2rem;
+	}
+}
 
 @media screen and (min-width: 768px) {
 
@@ -137,5 +157,12 @@ hr {
 	.work-offered {
 	    color: #929292;
 	    margin-bottom: 0;
+	}
+}
+
+@media screen and (min-width: 1440px) {
+	.container-fluid .change-font,
+	.custom-container .change-font {
+	 	font-size: 1.4rem;
 	}
 }
