--- a/assets/styles/toggles.css
+++ b/assets/styles/toggles.css
@@ -7,6 +7,15 @@
 	src: url(fonts/AvenirLTStd-Roman.otf);
 }
 
+body:not(.user-is-tabbing) a:focus,
+body:not(.user-is-tabbing) button:focus,
+body:not(.user-is-tabbing) input:focus,
+body:not(.user-is-tabbing) select:focus,
+body:not(.user-is-tabbing) textarea:focus {
+	outline: none;
+	box-shadow: none !important;
+}
+
 h2, .company, .container .center a, .navbar-brand,
 .navbar-custom .nav-link, #creations-foot, #zenith-foot,
 #brand-strategy, #video, #website {
