--- a/assets/styles/thehistorycompany.css
+++ b/assets/styles/thehistorycompany.css
@@ -13,6 +13,8 @@ h2 {
 	font-family: 'Times New Roman', serif;
 	font-size: 1.3rem;
 	margin: 50px auto;
+	padding-left: 5px;
+	padding-right: 5px;
 }
 
 h3 {
@@ -118,6 +120,11 @@ p {
 
 
 @media screen and (min-width: 992px) {
+
+	h2 {
+		padding-left: 25px;
+		padding-right: 25px;
+	}
 
 	.row {
 		margin-bottom: 50px;
