--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4,7 +4,7 @@ body {
 
 .btn-primary {
 	background-color: #111;
-	border: 3px solid #fff;
+	border: 3px solid #929292;
 	color: #fff;
 	text-transform: uppercase;
 }
